--- a/TheAnswer/Base.lproj/Main.storyboard
+++ b/TheAnswer/Base.lproj/Main.storyboard
@@ -1,25 +1,81 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Main View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="TheAnswer" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CYM-m4-Y4g">
+                                <rect key="frame" x="16" y="70.5" width="268" height="159.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The Answer?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iN3-Z7-h1G">
+                                        <rect key="frame" x="0.0" y="20" width="268" height="32.5"/>
+                                        <animations/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5tF-Ia-pgu">
+                                        <rect key="frame" x="67" y="94.5" width="134" height="45"/>
+                                        <animations/>
+                                        <color key="backgroundColor" red="0.80000001192092896" green="0.80000001192092896" blue="0.80000001192092896" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                        <state key="normal" title="Tell Me"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="7"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="tellMeTheAnswer:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aLz-pI-7fM"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="5tF-Ia-pgu" firstAttribute="width" relation="greaterThanOrEqual" secondItem="CYM-m4-Y4g" secondAttribute="width" multiplier="1:2" id="3xK-Dw-SYE"/>
+                                    <constraint firstItem="5tF-Ia-pgu" firstAttribute="top" secondItem="iN3-Z7-h1G" secondAttribute="bottom" constant="42" id="Fou-wE-aoB"/>
+                                    <constraint firstItem="iN3-Z7-h1G" firstAttribute="centerX" secondItem="CYM-m4-Y4g" secondAttribute="centerX" id="Pzr-Sx-lSn"/>
+                                    <constraint firstItem="iN3-Z7-h1G" firstAttribute="top" secondItem="CYM-m4-Y4g" secondAttribute="top" constant="20" symbolic="YES" id="RLi-Nm-IOY"/>
+                                    <constraint firstAttribute="trailing" secondItem="iN3-Z7-h1G" secondAttribute="trailing" id="U58-K5-sfh"/>
+                                    <constraint firstItem="5tF-Ia-pgu" firstAttribute="centerX" secondItem="CYM-m4-Y4g" secondAttribute="centerX" id="Y1i-XI-8G4"/>
+                                    <constraint firstItem="iN3-Z7-h1G" firstAttribute="leading" secondItem="CYM-m4-Y4g" secondAttribute="leading" id="gDN-bc-Fqa"/>
+                                    <constraint firstAttribute="bottom" secondItem="5tF-Ia-pgu" secondAttribute="bottom" constant="20" symbolic="YES" id="oVx-Ga-358"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="CYM-m4-Y4g" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="MZu-mH-6ca"/>
+                            <constraint firstItem="CYM-m4-Y4g" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="PE9-V1-fcX"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="CYM-m4-Y4g" secondAttribute="trailing" id="fSK-hR-uHk"/>
+                            <constraint firstItem="CYM-m4-Y4g" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="mtA-on-Uhc"/>
+                        </constraints>
                     </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="300" height="300"/>
+                    <connections>
+                        <outlet property="answerLabel" destination="iN3-Z7-h1G" id="3S4-Ai-H3u"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="380" y="231"/>
         </scene>
     </scenes>
 </document>
